[gd_scene load_steps=8 format=2]

[ext_resource path="res://PNG/Sprites/blobmonster.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Audio/Tentical_Monster_Agro.ogg" type="AudioStream" id=3]
[ext_resource path="res://Audio/BlobAgro.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 29.4423

[sub_resource type="CircleShape2D" id=2]
radius = 169.301

[sub_resource type="CircleShape2D" id=3]
radius = 34.7316

[node name="BlobEnemy" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Aggro Area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Aggro Area"]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="AudioStream_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioStream_Agro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioStream_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Aggro Area" to="." method="_on_Aggro_Area_body_entered"]
[connection signal="body_exited" from="Aggro Area" to="." method="_on_Aggro_Area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
